--- a/app/public/home.html
+++ b/app/public/home.html
@@ -5,9 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
 <body>
+    <div class = jumbotron style = "text-align: center">
     <h1>Friend Finder</h1>
-    
+    </div>
+
+    <a href="/survey">
+        <button type="button" class="btn btn-lg btn-primary" style = "text-align: center"> Start Here</button>
+    </a>
 </body>
 </html>
