--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -234,7 +234,7 @@
                 name: $("#name").val(),
                 photo: $("#photo").val(),
                 scores: [
-                  $("#q1").val(),
+                  $("#q1").parseInt(val()),
                   $("#q2").val(),
                   $("#q3").val(),
                   $("#q4").val(),
