--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -173,7 +173,7 @@
               </div>
               <div class="modal-body">
                 <h2 id="match-name"></h2>
-                <img id="match-img" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/6/005/064/1bd/3435aa3.jpg" alt="">
+                <img id="match-img" src=" https://imgur.com/gallery/E3pam" alt="">
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -234,7 +234,7 @@
                 name: $("#name").val(),
                 photo: $("#photo").val(),
                 scores: [
-                  $("#q1").parseInt(val()),
+                  $("#q1").val(),
                   $("#q2").val(),
                   $("#q3").val(),
                   $("#q4").val(),
